kubernetes/apps/immich-lightroom/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: immich-lightroom
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
