kubernetes/apps/immich-lightroom/postgres/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: immich-lightroom
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 5432
      from:
        - podSelector:
            matchLabels:
              app: immich-server
